--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,10 +3,11 @@
     justify-content: space-around;
     align-items: center;
     padding: 10px 20px;
-    top: -10px;
     background-color: #fff;
     border-bottom: 1px solid #ccc;
-    position: relative;
+    position: sticky; /* Make the navbar sticky */
+    top: 0; /* Stick to the top of the viewport */
+    z-index: 1000; /* Ensure the navbar is above other elements */
 }
 
 .logo {
@@ -29,11 +30,11 @@
     text-decoration: none;
     margin-left: 20px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .nav-links a:hover {
-    text-decoration: underline;
+   color:#66676b
 }
 
 .hamburger {
@@ -69,6 +70,7 @@
 .side-menu.open {
     left: 0px; /* Slide in */
     text-align: center;
+ 
 }
 
 .side-menu.close {
@@ -152,6 +154,7 @@
     }
     .side-menu.open {
         align-items: center;
+        height:110vh;
     }
     .side-menu.open a {
         padding: 5px 0px;
