--- a/src/components/paymentButtons/banners/homepageBanner/homepageBanner.css
+++ b/src/components/paymentButtons/banners/homepageBanner/homepageBanner.css
@@ -1,21 +1,21 @@
 .banner-container {
     display: flex;
     margin-top: 0px auto;
-    height: 500px;
+    height: 80vh;
     background-image: url("../../../../assets/images/banners/homepage-banner.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    align-items: center;
 }
 
 .text-container {
+    width: 100%;
     display: flex;
-    width: 70%;
     flex-direction: column;
-    height: max-content;
-    padding: 40px 80px;
-    /* border: 1px solid red; */
-    align-self: center;
+  
+
+
 }
 
 .text-container h1 {
@@ -36,6 +36,7 @@
 .link-buttons {
     display: flex;
     flex-direction: row;
+
     justify-content: flex-start;
 }
 
@@ -59,32 +60,46 @@
     /* Slightly enlarges the button on hover */
 }
 
+@media (min-width: 1024px){
+   .text-container h1{
+        font-size: 4rem;
+    }
+    .text-container h3{
+        font-size: 2rem;
+    }
+    .link-buttons button{
+        padding:10px 30px;
+        font-size: 1.5rem;
+    }
+}
 @media (max-width: 768px) {
+    
     .banner-container {
         background-size: cover;
         border-radius: 5px;
         margin-top: -8px;
         padding: 0px 10px;
-        /* border: 1px solid red; */
-        height: 300px
+ 
+        height: 350px
     }
     .text-container h1{
         font-size: 1.5rem;
     }
     .text-container{
-        width: 100%;
+        width: 80%;
         padding: 10px;
+        display: block;
     }
 }
 
 @media (max-width: 425px) {
     .banner-container {
         background-size: contain;
-        /* border: 1px solid red; */
+      padding-bottom: 0px;
         height: 200px
     }
     .text-container{
-        width: 100%;
+        width: 80%;
         padding: 5px 0px;
     }
     .text-container h1{
