--- a/src/components/paymentButtons/paymentButton.css
+++ b/src/components/paymentButtons/paymentButton.css
@@ -1,9 +1,10 @@
-.container{
+.btn-container{
     width: 100%;
     display: flex;
     flex-direction: row;
     margin-top: 5px;
-    justify-content: space-between;
+  
+    justify-content:center;
  
   
 }
@@ -27,7 +28,7 @@
 }
 
 @media (max-width: 768px) {
-    .container{
+    .btn-container{
         display: none;
     }
 }
