--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.box-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 40px;
+}
 .form-container {
     max-width: 100%;
     margin: 20px auto;
@@ -10,12 +18,15 @@
 .form-header {
     text-align: center;
     margin-bottom: 20px;
+    
 }
 
 .form-header h1 {
     margin: 0;
     font-size: 36px;
     color: #333;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
 }
 
 .form-header p {
@@ -119,7 +130,14 @@ padding: 30px 10px;
 }
 
 @media (max-width: 880px) {
+    .box-container{
+        flex-direction: column;
+    }
     .form-content{
+        width: 100%;
         flex-wrap: wrap;
+    }
+    .summary-container{
+        width: 100%;
     }
 }
