--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,11 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .footer-distributed{
 	background: #ffffff;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
-	font: bold 16px sans-serif;
+	font-family: "Poppins", sans-serif;
+	font-size: 12px;
+	border-top: 1px solid rgb(204, 204, 204);
+	font-weight:500;
 	padding: 55px 50px;
 }
 
@@ -14,12 +17,18 @@
 .footer-distributed .footer-right{
 	display: inline-block;
 	vertical-align: top;
+	font-family: "Poppins", sans-serif;
+	font-size: 12px;
+	font-weight:500;
 }
 
 /* Footer left */
 
 .footer-distributed .footer-left{
 	width: 40%;
+	font-family: "Poppins", sans-serif;
+	font-size: 12px;
+	font-weight:500;
 }
 
 /* The company logo */
@@ -28,6 +37,9 @@
 	color:  #000000;
 	font: normal 36px 'Open Sans', cursive;
 	margin: 0;
+	font-family: "Poppins", sans-serif;
+	font-size: 12px;
+	font-weight:500;
 }
 
 .footer-distributed h3 span{
@@ -92,8 +104,8 @@
 .footer-distributed .footer-center p span{
 	display:block;
 	font-weight: normal;
-	font-size:14px;
-	line-height:2;
+	font-size:12px;
+	/* line-height:2; */
 }
 
 .footer-distributed .footer-center p a{
