--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -55,16 +55,17 @@ border-radius: 20px;
 
 .form-group label {
     display: block;
-    font-weight: bold;
+    font-weight: 600;
+ font-size: 14px;
     margin-bottom: 8px;
 }
 
 .form-group input, .form-group select {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     font-size: 14px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .error {
@@ -87,32 +88,53 @@ padding: 30px 10px;
 }
 
 .summary {
+    display: flex;
+    flex-direction: column;
+   
+    margin-top: -15px;
     margin-bottom: 20px;
 }
-
+.summary-heading{
+font-size: 1.5rem;
+padding:2px;
+align-self: flex-start;
+color: rgb(2, 2, 2);
+float: left;
+}
+.summary-content{
+padding: 5px;
+border-bottom: 2px solid rgb(204, 204, 204) ;
+margin-bottom: 15px;
+}
 .summary p {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-size: 16px;
+  font-weight: bold;
     color: #333;
 }
 
 .summary .total {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
+   
 }
 
 .pay-now-button {
-    background-color: #4CAF50;
+    width: 80%;
+    background-color: #d32f2f;
     color: white;
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
 }
 
 .pay-now-button:hover {
-    background-color: #45a049;
+    background-color: #333;
 }
 
 .form-note {
