--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .navbar {
     display: flex;
     justify-content: space-around;
@@ -16,8 +17,8 @@
 }
 
 .logoImg {
-    width: 300px;
-    height: 100px;
+    width: 250px;
+    height: 60px;
     cursor: pointer;
 }
 
@@ -28,9 +29,10 @@
 .nav-links a {
     color: #d32f2f;
     text-decoration: none;
+    font-family: "Poppins", sans-serif;
     margin-left: 20px;
-    font-weight: bold;
-    font-size: 16px;
+  
+    font-size: 14px;
 }
 
 .nav-links a:hover {
@@ -60,6 +62,7 @@
     border-right: 1px solid #d6000054;
     box-shadow:  2px 0 5px #f97f007a;
     padding: 20px;
+    font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,7 +83,7 @@
 .side-menu a {
     color: #d12031;
     text-decoration: none;
-    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
 }
 
@@ -91,7 +94,7 @@
 /* Dropdown Styles */
 .dropdown {
     width: 100%;
-    
+    font-family: "Montserrat", sans-serif;
     text-align: center;
 }
 
@@ -99,10 +102,11 @@
     background: none;
     border: none;
     font-size: 16px;
-    font-weight: bold;
+   
     color: #d12031;
     cursor: pointer;
     align-items: center;
+    font-family: "Montserrat", sans-serif;
     justify-content: center;
 }
 
@@ -112,6 +116,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Montserrat", sans-serif;
     width: 100%;
     transition: height 0.3s ease; /* Transition for height change */
 }
