--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 10px 20px;
     background-color: #fff;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1.5px solid #ccc;
     position: sticky; /* Make the navbar sticky */
     top: 0; /* Stick to the top of the viewport */
     z-index: 1000; /* Ensure the navbar is above other elements */
@@ -30,9 +30,9 @@
     color: #d32f2f;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
-    margin-left: 20px;
-  
-    font-size: 14px;
+    margin-left: 25px;
+  font-weight: bold;
+    font-size: 16px;
 }
 
 .nav-links a:hover {
