--- a/src/components/paymentButtons/paymentButton.css
+++ b/src/components/paymentButtons/paymentButton.css
@@ -2,8 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 5px;
-  
+    margin-top: 20px;
     justify-content:center;
  
   
@@ -11,12 +10,14 @@
 .payment-btn {
     width: max-content;
     height: max-content;
-    margin: 0px 5px;
-    background-color: #d12031;
+    margin: 0px 10px;
+    background-color: #b31a29;
     color: white;
     border: none;
-    padding: 10px 10px; /* Added padding for better button appearance */
+    border-radius: 20px;
+    padding: 7px 25px; /* Added padding for better button appearance */
     font-size: 14px;
+    font-weight: 700;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Added transition for smooth animation */
 }
